--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-webp": "^4.0.1"
+    "gulp-terser-js": "^5.2.2",
+    "gulp-webp": "^4.0.1",
+    "postscss": "^1.6.0"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.0.0",
+    "cssnano": "^4.1.10",
+    "gulp-postcss": "^9.0.0",
+    "gulp-sourcemaps": "^3.0.0"
   }
 }
